--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Carosello Mono Array</title>
 </head>
 <body>
-
+    <div class="container">
+        <div class="items">
+            <div class="item active">
+                <img src="./img/01.webp" alt="">
+            </div>
+            <div class="item">
+                <img src="./img/02.webp" alt="">
+            </div>
+            <div class="item">
+                <img src="./img/03.webp" alt="">
+            </div>
+            <div class="item">
+                <img src="./img/04.webp" alt="">
+            </div>
+            <div class="item">
+                <img src="./img/05.webp" alt="">
+            </div>
+        </div>
+    </div>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
