--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Carosello Mono Array</title>
 </head>
@@ -24,6 +25,12 @@
             </div>
             <div class="item">
                 <img src="./img/05.webp" alt="">
+            </div>
+            <div class="prev">
+                <i class="fa-solid fa-chevron-up"></i>
+            </div>
+            <div class="next">
+                <i class="fa-solid fa-chevron-down"></i>
             </div>
         </div>
     </div>
