--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
             <div class="item">
                 <img src="./img/05.webp" alt="">
             </div>
+        </div>
+        <div class="thumbs">
+            <div class="thumb active">
+                <img src="./img/01.webp" alt="">
+            </div>
+            <div class="thumb">
+                <img src="./img/02.webp" alt="">
+            </div>
+            <div class="thumb">
+                <img src="./img/03.webp" alt="">
+            </div>
+            <div class="thumb">
+                <img src="./img/04.webp" alt="">
+            </div>
+            <div class="thumb">
+                <img src="./img/05.webp" alt="">
+            </div>
             <div class="prev">
                 <i class="fa-solid fa-chevron-up"></i>
             </div>
