--- a/index.html
+++ b/index.html
@@ -10,39 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="items">
-            <div class="item active">
-                <img src="./img/01.webp" alt="">
-            </div>
-            <div class="item">
-                <img src="./img/02.webp" alt="">
-            </div>
-            <div class="item">
-                <img src="./img/03.webp" alt="">
-            </div>
-            <div class="item">
-                <img src="./img/04.webp" alt="">
-            </div>
-            <div class="item">
-                <img src="./img/05.webp" alt="">
-            </div>
-        </div>
+        <div class="items"></div>
         <div class="thumbs">
-            <div class="thumb active">
-                <img src="./img/01.webp" alt="">
-            </div>
-            <div class="thumb">
-                <img src="./img/02.webp" alt="">
-            </div>
-            <div class="thumb">
-                <img src="./img/03.webp" alt="">
-            </div>
-            <div class="thumb">
-                <img src="./img/04.webp" alt="">
-            </div>
-            <div class="thumb">
-                <img src="./img/05.webp" alt="">
-            </div>
+            <div class="thumbs-content"></div>
             <div class="prev">
                 <i class="fa-solid fa-chevron-up"></i>
             </div>
